syntax = "proto3";

package tests.api.v1;
option go_package = "github.com/aserto-dev/protohash/tests/api/v1;api"; 

// Single contains one of each primitive data type.
message Single {
    bool        bool_field          = 1;
    bytes       bytes_field         = 2;
    double      double_field        = 3;
    fixed32     fixed32_field       = 4;
    fixed64     fixed64_field       = 5;
    float       float_field         = 6;
    int32       int32_field         = 7;
    int64       int64_field         = 8;
    sfixed32    sfixed32_field      = 9;
    sfixed64    sfixed64_field      = 10;
    sint32      sint32_field        = 11;
    sint64      sint64_field        = 12;
    string      string_field        = 13;
    uint32      uint32_field        = 14;
    uint64      uint64_field        = 15;   
}

// OptionalSingle contains one of each primitive data type as an optional field.
message OptionalSingle {
    optional bool        bool_field          = 1;
    optional bytes       bytes_field         = 2;
    optional double      double_field        = 3;
    optional fixed32     fixed32_field       = 4;
    optional fixed64     fixed64_field       = 5;
    optional float       float_field         = 6;
    optional int32       int32_field         = 7;
    optional int64       int64_field         = 8;
    optional sfixed32    sfixed32_field      = 9;
    optional sfixed64    sfixed64_field      = 10;
    optional sint32      sint32_field        = 11;
    optional sint64      sint64_field        = 12;
    optional string      string_field        = 13;
    optional uint32      uint32_field        = 14;
    optional uint64      uint64_field        = 15;   
}